[package]
name        = "wheatgame"
version     = "0.1.0"
description = "Wheat.game — a multiplayer Solana farming protocol."
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "wheatgame"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl  = "0.30.1"
